# LirealMusic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  出山-花粥 王胜娚.lrc
.github/workflows/: release.yml
Project_Guid/: Requirement.md  main.md
assets/shaders/: lireal_effects.wgsl
assets/themes/: sakura.qss
include/lireal/audio/: audio_analyzer.hpp  onnx_source_separator.hpp
include/lireal/lyrics/: lrc_parser.hpp
include/lireal/render/: render_config.hpp  video_renderer.hpp  webgpu_backend.hpp
include/lireal/system/: hardware_profile.hpp
include/lireal/ui/: dashboard_window.hpp
src/: main.cpp  tui_main.cpp
src/lireal/audio/: audio_analyzer.cpp  onnx_source_separator.cpp
src/lireal/lyrics/: lrc_parser.cpp
src/lireal/render/: video_renderer.cpp  webgpu_backend.cpp
src/lireal/system/: hardware_profile.cpp
src/lireal/ui/: dashboard_window.cpp
vibecodelog/: 2026-06-15-algorithm-upgrade.md  2026-06-15-audio-mux.md  2026-06-15-build-verification.md  2026-06-15-cancel-and-open-folder.md  2026-06-15-chinese-lyrics-rendering.md  2026-06-15-cpp-initial-renderer.md  2026-06-15-dashboard-parameters.md  2026-06-15-encoder-quality-controls.md  2026-06-15-live-preview-window.md  2026-06-15-material-validation.md  2026-06-15-max-visual-effects.md  2026-06-15-multistem-25d-surround.md  2026-06-15-onnx-source-separation.md  2026-06-15-pipe-encoder-and-ui-fix.md  2026-06-15-preview-image.md  2026-06-15-preview-time-quality-timing.md  2026-06-15-reference-style-effects.md  2026-06-15-second-max-visual-pass.md  2026-06-15-style-layout-dragdrop.md  2026-06-16-4k-record-preview.md  2026-06-16-auto-encoder-backend.md  2026-06-16-cover-lyrics-fps-gpu.md  2026-06-16-cute-lyric-transition-title-highlight.md  2026-06-16-dashboard-xianxia-template.md  2026-06-16-disable-native-dialogs-globally.md  2026-06-16-encoder-backends.md  2026-06-16-encoder-preflight-fallback.md  2026-06-16-lyric-motion-concurrency-spatial-stage.md  2026-06-16-multithread-nvidia-render.md  2026-06-16-qt-file-dialogs.md  2026-06-16-render-stats-eta.md  2026-06-17-bundled-loli-font-title-layout.md  2026-06-17-file-picker-audio-preview-loli-font.md  2026-06-17-global-webgpu-default.md  2026-06-17-release-nixos-real-gpu-list.md  2026-06-17-tui-snap-dialog-encoder-preset-fix.md  2026-06-17-tui-webgpu-hardware-rolling-lyrics.md  2026-06-18-hifi-stereo-3d-surround.md  2026-06-18-real-3d-surround-audio.md  2026-06-18-visual-audio-effect-boost.md  (+20 more)
